adding Components file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
   <h1>Welcome to Your Frontend Theme</h1>
-  <script src="js/script.js"></script>
+  
+ 
+   <div class="app">
+      <!-- page wiil be loaded here -->
+        
+  </div>
+   <script src="main.js"></script>
 </body>
 </html>
