Revert "adding Components file"

--- a/index.html
+++ b/index.html
@@ -8,12 +8,6 @@
 </head>
 <body>
   <h1>Welcome to Your Frontend Theme</h1>
-  
- 
-   <div class="app">
-      <!-- page wiil be loaded here -->
-        
-  </div>
-   <script src="main.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
