--- a/index.html
+++ b/index.html
@@ -4,10 +4,58 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Frontend Theme Starter</title>
+
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/Adbox.css" />
+  <link rel="stylesheet" href="css/cards.css" />
+  <link rel="stylesheet" href="css/Cardreuse.css" />
+  <link rel="stylesheet" href="css/blockhead.css" />
+  <link rel="stylesheet" href="css/Section.css" />
+  
+
+
 </head>
 <body>
-  <h1>Welcome to Your Frontend Theme</h1>
+  <h1>NAVBAR</h1>
+  <div id="ad-placeholder1"></div>
+  
+
+  <div class="card-rows" id="card-container"></div>
+   
+  <div class="block-head">
+    <h4 class="title"><a href="#">TRAVEL</a></h4>
+    <a href="#" class="view-all">View All</a>
+  </div>
+
+  <div class="card-row" id="cardre-container1"></div>
+
+  <div id="ad-placeholder2"></div>
+
+  <div id="main-section-content-area"></div>
+
+
+<div class="block-head">
+    <h4 class="title"><a href="#">LATEST</a></h4>
+    <a href="#" class="view-all">View All</a>
+  </div>
+ <div class="card-row" id="cardre-container2"></div> 
+  <button id="loadMoreBtn" class="load-more-btn">Load More</button>
+   <div id="ad-placeholder2"></div>
+
+   
+   
+
+
+
+
+
+
   <script src="js/script.js"></script>
+  <script src="js/Adbox.js"></script>
+  <script src="js/Card.js"></script>
+  <script src="js/Cardreuse.js"></script>
+  <script src="js/Section.js"></script>
+
+
 </body>
 </html>
